--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ theme: "grusp_conf"
 # Site / OG
 type: website
 slug: containerday
-edition: 2021
-title: "containerday 2021"
-description: "containerday 2021, online conference"
+edition: 2023
+title: "containerday 2023"
+description: "containerday 2023"
 #   separate keywords by comma, no spaces
 keywords: conference,software conference,css,ux,design,webdev,tech conference
 author: GrUSP
@@ -36,7 +36,7 @@ breadcrumb:
 # URL
 ## If your site is put in a subdirectory, set url as 'yoursite.com/child' and root as '/child/'
 # TODO actual URL (per site)
-url: https://2021.containerday.it/
+url: https://2023.containerday.it/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
