--- a/source/_data/defaults.yml
+++ b/source/_data/defaults.yml
@@ -6,14 +6,14 @@
 # conference config
 conference:
   # Online-only conferences
-  is_online_only: true
+  is_online_only: false
   online_location: "online"
   online_location_title: "Internet"
   online_location_info: "La conferenza si svolge da remoto"
 
   # menu and general params
   menu_buy_tickets_label: "Compra il biglietto"
-  buy_tickets_url: "https://www.eventbrite.com/e/biglietti-containerday-2021-130900796807"
+  buy_tickets_url: "https://www.eventbrite.it/e/biglietti-containerday-2023-576145114547"
   # additional info for microdata / schema.org
   #md_city: "Verona"
   #md_province: "VR"
@@ -24,12 +24,12 @@ conference:
   contact_email: "containerday@grusp.org"
   # these are for the hero section
   title_pre: ""
-  title: "containerday Digital Edition"
-  city: "online"
-  date: 2021-04-15T10:00+02:00
+  title: "containerday 2023"
+  city: "Bologna"
+  date: 2023-10-12T09:00+02:00
   # Use the next field to override the date in the hero
   hero_date_text:
-  countdown_visible: true
+  countdown_visible: false
   countdown_days: "giorni"
   countdown_hours: "ore"
   countdown_minutes: "minuti"
@@ -50,14 +50,14 @@ conference:
   cfp_open: true
   cfp_readmore_label: "Continua a leggere"
   cfp_open_label: "Proponi un talk entro il"
-  cfp_open_title: "Call For Papers aperta!"
-  cfp_deadline: 2021-01-31T23:59+01:00
+  cfp_open_title: "Call For Paper aperta!"
+  cfp_deadline: 2023-06-25T23:59+01:00
   cfp_register_label: "Invia la tua proposta"
   cfp_register_aria_label: "Inviaci ora la tua proposta"
   # "general information" ("what is it?") component
   geninfo_visible: true
   geninfo_title: "Che cos'è?"
-  geninfo_description: "containerday è la conferenza italiana dedicata ai CSS, uno degli strumenti più potenti, ed allo stesso tempo sottovalutati, del nuovo rinascimento del web.<br>Nata come track del jsday e dallo stesso team di Kerning, containerday vuole dare una dignità alla tecnologia che rende tutti i siti più leggibili, interattivi ed anche belli da vedere.<br> containerday 2021 si svolge online."
+  geninfo_description: "<p>containerday è la principale conferenza italiana dedicata esclusivamente alle tecnologie di containerizzazione e virtualizzazione ed alle buone pratiche ad esse associate.</p><p>Docker, Kubernetes e le tecnologie di virtualizzazione stanno cambiando radicalmente il mondo delle infrastrutture IT. Alla conferenza saranno presentate le best practices, le tecnologie innovative e gli strumenti più maturi per poter gestire e far evolvere una infrastruttura IT moderna.</p><p><b>containerday 2023 si svolge a Bologna e online, Venerdì 12 Ottobre 2023.</b></p>"
   geninfo_about_label: "About"
   geninfo_coc_label: "Codice di condotta"
   geninfo_scholarships_label: "Scholarships"
@@ -97,15 +97,16 @@ conference:
   topics_title: "Argomenti e temi"
   topics_description: "Parleremo di..."
   topics:
-    - "CSS"
-    - "UX"
-    - "Accessibilità"
-    - "Testing"
-    - "Design"
-    - "Metodologie"
+    - "Container"
+    - "Docker"
+    - "kubernetes"
+    - "sistemi operativi, ecosistemi e tendenze"
+    - "intergrazioni con Cloud provider"
+    - "Metodologia e microservizi"
+    - "monitoring e gestione"
   topics_payoff: "...e molto altro!"
   # "workshop" component. set the first parameter to true to make it appear in home page, false means hidden
-  workshop_visible: true
+  workshop_visible: false
   workshops_title: "workshop"
   workshops_tickets_label: "Acquista i biglietti"
   workshops_readmore_label: "Continua a leggere"
@@ -124,14 +125,14 @@ conference:
   # vimeo_base_url: "https://vimeo.com/channels/"
   # vimeo_url_suffix: "/embed"
   #   (embed YouTube playlist: prendere l'ID della lista dall'URL, la parte dopo '&list=', e metterla qui sotto)
-  youtube_playlist_id: "PLWK9j6ps_unnzawdRcS0h5O6if5f8mtCc"
+  youtube_playlist_id: "PLWK9j6ps_unmk6E2XFEv-tMfnFh4fJhEr"
   #   (embed Vimeo showcase: prendere l'ID dello showcase e metterla qui sotto)
   # vimeo_showcase_id: "italiancontainerday"
   # Location section in home page. set the first parameter to true to make it appear in home page, false means hidden
-  location_visible: false
-  location_name: "Hotel San Marco"
-  location_address: "Via Longhena 42, 37138 Verona (VE) Italy"
-  location_maps_url: "https://www.google.com/maps/place/Hotel+San+Marco+Fitness+Pool+%26+SPA/@45.4399961,10.9697441,17z/data=!3m1!4b1!4m8!3m7!1s0x4781e1e30a8be6af:0x8091b108e1d130c6!5m2!4m1!1i2!8m2!3d45.4399961!4d10.9719328"
+  location_visible: true
+  location_name: "Hotel Savoia Regency"
+  location_address: "Via del Pilastro, 2, 40127 Bologna (BO)"
+  location_maps_url: "https://goo.gl/maps/KmKU5YsBGjZihnkTA"
   location_maps_label: "Get directions"
   location_readmore_label: "Read more"
   # image credits (l'esempio è per la hero del CSS Day!)
@@ -148,7 +149,7 @@ conference:
   social_fb_url: "https://www.facebook.com/containerday"
   social_linkedin_url: "https://www.linkedin.com/company/grusp/"
   social_twitter_url: "https://twitter.com/containerdayit"
-  social_vimeo_url: "https://vimeo.com/channels/italiancontainerday"
+  social_vimeo_url: "https://vimeo.com/grusp"
   social_youtube_url: "https://www.youtube.com/c/grusp"
   social_instagram_url: "https://www.instagram.com/grusp_/"
   # 404
@@ -158,12 +159,13 @@ conference:
   base_url: "containerday.it/"
   past_editions_pre: "Passate edizioni della conferenza:"
   past_editions:
-    2015: "2015"
     2016: "2016"
     2017: "2017"
     2018: "2018"
     2019: "2019"
     2020: "2020"
+    2021: "2021"
+    2022: "2022"
   past_editions_videos_pre: "Tutti i video delle passate edizioni sono disponibili su "
   past_editions_videos_vimeo_label: "Vimeo"
   past_editions_videos_mid: " e "
