--- a/source/_data/page_cfp.yml
+++ b/source/_data/page_cfp.yml
@@ -1,6 +1,6 @@
 intro:
   main_title: "Call for paper"
-  date_intro: "La call for paper resterà aperta fino al 26 giugno 2023 ore 00:59"
+  date_intro: "La call for paper resterà aperta fino al"
   # NB la data è definita in `defaults`
   content_1: "containerday è la conferenza italiana dedicata alle tecnologie di containerizzazione e virtualizzazione ed alle buone pratiche ad esse associate."
   content_2: ""
