--- a/source/_data/defaults.yml
+++ b/source/_data/defaults.yml
@@ -47,7 +47,7 @@ conference:
   update_link_url: "https://2023.devsecopsday.it/"
   update_link_label: "Scopri di più su devsecopsday"
   # "call for papers" component. set the first parameter to true to make it appear in home page, false means hidden
-  cfp_open: true
+  cfp_open: false
   cfp_readmore_label: "Continua a leggere"
   cfp_open_label: "Proponi un talk entro il"
   cfp_open_title: "Call For Paper aperta!"
@@ -69,9 +69,9 @@ conference:
   newsletter_lists:
     php: false
     javascript: false
-    design: true
-    devops: false
-    frontend: true
+    design: false
+    devops: true
+    frontend: false
     ruby: false
     entrepreneurship: false
     local_events: false
