--- a/source/_data/sponsors.yml
+++ b/source/_data/sponsors.yml
@@ -1,24 +1,20 @@
-sponsors_block_title: ""
-# main:
-#  sponsor1:
-#    name: ""
-#    logo_filename: ""
-#    site_url: ""
-# diamond:
-#   sponsor1:
-#     name: ""
-#     logo_filename: ""
-#     site_url: ""
-# platinum:
-#   sponsor1:
-#     name: ""
-#     logo_filename: ""
-#     site_url: ""
+sponsors_block_title: "Grazie al supporto di"
+
 main:
   sponsor1:
     name: "Sighup"
     logo_filename: "sighup.svg"
     site_url: "https://sighup.io/"
+diamond:
+  sponsor1:
+    name: "NTT Data"
+    logo_filename: "nttdata.svg"
+    site_url: "https://it.nttdata.com/"
+platinum:
+  sponsor1:
+    name: "SUSE"
+    logo_filename: "suse.svg"
+    site_url: "https://www.suse.com/"
 gold:
   sponsor1:
     name: "Daruma"
@@ -41,7 +37,7 @@ bronze:
   sponsor1:
     name: "stickermule"
     logo_filename: "stickermule.svg"
-    site_url: "https://mule.to/p2gc"
+    site_url: "https://www.stickermule.com/it/uses/laptop-stickers"
 # diversity:
 #   sponsor1:
 #     name: "S"
