--- a/source/_data/workshop.yml
+++ b/source/_data/workshop.yml
@@ -2,100 +2,228 @@ read_more_label: "Maggiori informazioni"
 summary_page_aria_label: "workshop"
 summary_page_button_label: "Torna alla pagina workshop"
 # image credits (l'esempio è per la hero del CSS Day!)
-workshop_img_credits: 
+workshop_img_credits:
 
 workshops:
-  font_variabili:
-    ws_id: font_variabili
+  Cyber-Ranching:
+    ws_id: Cyber-Ranching
     is_external: false
-    page_uri: "workshop/font_variabili.html"
-    page_title: "Tipografia web e font variabili"
-    workshop_title: "Tipografia web e font variabili"
-    ticket_url: "https://containerday-2021.eventbrite.com"
-    ticket_label: "Partecipa"
+    page_uri: "workshop/Cyber-Ranching.html"
+    page_title: "Lab Pratico di Cyber-Ranching"
+    workshop_title: "Lab Pratico di Cyber-Ranching"
+    ticket_url: "https://containerday-2023.eventbrite.com"
+    ticket_label: "Partecipa al workshop"
     location_title: "Dove"
-    # location: "Verona"
-    online_location: "online"
-    # location_name: "Hotel San Marco"
+    location: "Bologna"
+    # online_location: "online"
+    location_name: "Hotel Savoia Regency"
     # location_name: "The Internet"
-    # location_contact_phone: "+045569011"
-    # location_contact_email: "sanmarco@sanmarco.vr.it"
-    # location_contact_url: "https://www.sanmarco.vr.it/"
-    # location_address: "Via Longhena 42, 37138 Verona (VE) Italy"
-    # location_maps_url: "https://www.google.com/maps/place/Hotel+San+Marco+Fitness+Pool+%26+SPA/@45.4399961,10.9697441,17z/data=!3m1!4b1!4m8!3m7!1s0x4781e1e30a8be6af:0x8091b108e1d130c6!5m2!4m1!1i2!8m2!3d45.4399961!4d10.9719328"
-    # location_maps_label: "Get directions"
-    # location_additional_info: "L'hotel offre tariffe scontate ai partecipanti ai workshop, sia per camere singole sia per camere doppie."
-    location_additional_info: "Il workshop si svolge online, in aula virtuale"
+    location_contact_phone: ""
+    location_contact_email: ""
+    location_contact_url: "https://www.savoia.eu/"
+    location_address: "Via del Pilastro, 2, 40127 Bologna BO"
+    location_maps_url: "https://goo.gl/maps/KmKU5YsBGjZihnkTA"
+    location_maps_label: "Mappa"
+    location_additional_info: ""
+    # location_additional_info: "add info 2"
     whatandwhen_title: "Quando"
-    # whatandwhen_additional_info: "Registrazione, caffè e pranzo inclusi"
-    whatandwhen_additional_info: "8 ore, divise in due sessioni: Martedì 16 e Mercoledì 17 Marzo 2021, dalle 9 alle 13."
-    date: 2021-03-16 09:00
-    end_date: 2021-03-17 13:00
-    date_text:
+    whatandwhen_additional_info: "Mercoledì 11 Ottobre 2023, dalle 9:30 alle 17:30. Sono inclusi coffee break e pranzo."
+#    whatandwhen_additional_info: "Giovedì 17 Marzo 2022, dalle 9 alle 18"
+    date: 2023-11-10T09:30+02:00
+    end_date: 2023-11-10T17:30+02:00
+    date_text: "Mercoledì 11 Ottobre 2023"
     language_title: "Lingua"
     language: "italiano"
     # language_ext: "Lingua: italiano"
-    language_additional_info: ""  
-    # collab: "Workshop realizzato in collaborazione con Giulia Laco"
-    description: "Progettare un sistema tipografico per siti web sfruttando i vantaggi del formato OpenType 1.8"
-    description_long: 
-      "<strong> Progettare un sistema tipografico per siti web sfruttando i vantaggi del formato OpenType 1.8 </strong>
-      <br>
-      <br  /> I font variabili rappresentano una grossa novità per la tipografia dei siti web e godono oggi di un buon supporto a livello dei browser. Il formato rappresenta inoltre un’opportunità di miglioramento delle performance dei web font e un sorprendente ampliamento delle possibilità tipografiche. I siti web sono strutture complesse in cui il testo compare con diverse funzioni: dal corpo del testo, ai titoli, ai menù di navigazione e non solo. Ogni parte merita un diverso trattamento tipografico per esaltare al contempo l'architettura del sito, la struttura di pagina e la natura stessa del contenuto. I font variabili sembrano proprio venirci in aiuto. Per sfruttarne appieno le potenzialità, occorre capirne le ragioni storiche e immaginarne l’utilizzo creativo nelle interfacce digitali, nell’animazione del testo, nel design fluido, fino all’espressione del brand in modi nuovi, prima impensabili.
-      <br>
-      <br  /> Nel workshop verranno affrontati sia aspetti teorici che pratici.
-      <br>
-      <br  /> <strong> Cosa ottieni frequentando questo workshop: </strong>
-      <ul>
-        <li>• Conoscenza del formato dei font variabili e collocazione nella storia tipografica</li>
-        <li>• Capacità di corretta implementazione dei font variabili e dei fallback font con consapevolezza delle tematiche legate al web font loading</li>
-        <li>• Consapevolezza di cosa si acquista quando si compera un font</li>
-        <li>• Spunti per la creatività in base a ciò che un dato font prevede</li!>
-      </ul>
-      <br>"
+    language_additional_info: ""
+    collab: "Workshop realizzato in collaborazione con SUSE"
+    description: "Orientarsi nel selvaggio West DevSecOps: un viaggio alla gestione di Kubernetes e nella sicurezza dei container"
+    description_long:
+      "Orientarsi nel selvaggio West DevSecOps: un viaggio alla gestione di Kubernetes e nella sicurezza dei container
+      <br><br  /> In questo laboratorio pratico, vedremo come utilizzare gli strumenti necessari per poter pianificare una strategia di sicurezza efficace e all'avanguardia.
+      Saranno introdotti Rancher, Docker e Kubernetes guidandovi attraverso i passaggi per eseguire deployment di un cluster Kubernetes.<br><br  />"
     # video trailer?
     trailer: false
-    trailer_url: "https://player.vimeo.com/video/352012164"
+    trailer_url: ""
     # nota sul titolo: se il linguaggio specificato in `language` NON in clude 'italian', in pagina viene aggiunta la "s" finale
-    teacher_title: "Docente"
+    teacher_title: "Docenti"
     teachers:
       teacher_1:
-        teacher_name: "Giulia Laco"
-        teacher_bio: "Formazione umanistica mescolata alla Logica matematica, la Linguistica, l’Intelligenza Artificiale e la Filosofia del Linguaggio. 
-          Attratta dal Web design fin dagli esordi, sono stata webmaster in azienda nell’altro secolo e Web designer/developer in questo, appassionandomi ciclicamente a nuove discipline: Web Marketing, Architettura dell’Informazione, SEO, UX e Web Typography – per citarne alcune. 
-          Da qualche anno cerco di ispirare la comunità dei web designer all’utilizzo consapevole della tipografia per il web."
-        pic_filename: "giulia-laco.jpg"
-        teacher_role: "Web designer/developer"
-        teacher_org: "WebMatter"
-    # teacher_2:
-      #  teacher_name: ""
-      # teacher_bio: ""
-      # pic_filename: ""
-      # teacher_role: ""
-      # teacher_org: ""
-    topics_title: "Argomenti trattati"
+        teacher_name: "Giulio Todini"
+        teacher_bio: "Ingegnere, PhD in fisica satellitare. Ha lavorato in ambito data analysis, data optimisation e software development all’interno della digital aviation di Boeing. Negli ultimi anni ha ricoperto ruoli di supporto e consulenza in ambito tecnologico per clienti enterprise e public sector avendo l’opportunità di coordinare team di operations.
+        Oggi come Pre-sales consultant presso SUSE, promuove l’innovazione a livello enterprise incentrata su tecnologie totalmente open-source."
+        pic_filename: "giulio-todini.jpeg"
+        teacher_role: "Presales engineer"
+        teacher_org: "SUSE"
+      teacher_2:
+        teacher_name: "Luca Barzè"
+        teacher_bio: "Luca lavora come Presales Engineer presso SUSE, dove mette a disposizione la sua conoscenza dei sistemi IT, dei servizi cloud, e del mondo cloud-native per supportare il processo di vendita. Con un background in fisica e un forte interesse per le innovazioni tecnologiche, apprezza il fatto di aiutare i clienti e la community a orientarsi tra le esigenze tecnologiche. La sua esperienza spazia da ruoli di consulenza sul cloud, all’architettura dei big data e all’innovazione IT."
+        pic_filename: "luca-barze.png"
+        teacher_role: "Presales engineer"
+        teacher_org: "SUSE"
+    topics_title: "Programma"
     topics:
-      - "Web font, font di sistema, UI system font"
-      - "Formati di font"
-      - "Direttiva CSS @font-face"
-      - "Il caricamento dei font, FOIT/FOUT"
-      - "La proprietà font-display"
-      - "Fallback font e font-stack"
-      - "I font variabili"
-      - "Gli assi di variazione"
-      - "Proprietà CSS (basso livello vs. CSS4)"
-      - "Font-size (unità di misura)"
-      - "Responsive Web Typography vs. Fluid Web Typography"
-      - "Typesetting del paragrafo perfetto"
-      - "Anatomia dei caratteri"      
-      - "Classificazione"
-      - "Font-pairing" 
-      - "Testo e funzione"      
+      - "Le sfide rappresentate dalla sicurezza dei container"
+      - "Funzionalità di NeuVector"
+      - "Installazione di un cluster Kubernetes e di NeuVector"
+      - "Una panoramica dell’interfaccia utente di NeuVector"
+      - "Cosa aspettarsi quando il tuo cluster K8s si aspetta una nuova app"
+      - "Comportamento di un’applicazione"
+      - "Cambio di modalità: come/quando/perché"
+      - "Bonus round: divertimento con scenari di attacco"
+      - "Docker e Kubernetes: Concetti ed Architetture"
+      - "Deployment e set up del Rancher Server"
+      - "Kubernetes cluster deployment"
+      - "Application Deployment & Access"
+
     addressees_title: "A chi è rivolto"
-    addressees_description: "Il corso è rivolto a designer, sviluppatori, product owner e manager che vogliano applicare font variabili e principi di tipografia al proprio prodotto o progetto."
+    addressees_description: "Il laboratorio è rivolto a persone con ruoli tecnici e manageriali (architect, devOps, engineer, security manager, IT manager...), che conoscono kubernetes e che vogliono migliorarne l’utilizzo e la gestione con strumenti potenti come rancher e studiare gli aspetti di cybersicurezza nel mondo container."
     requirements_title: "Requisiti di partecipazione"
-    requirements_description: "Per partecipare è necessaria una conoscenza base di CSS e HTML. <br /> Ti serviranno inoltre un editor di codice e il browser (consigliata: ultima versione di Firefox) <br /> Verranno suggeriti prima del corso eventuali altri strumenti/configurazioni utili."
+    requirements_description: "Per partecipare al laboratorio sono necessarie:
+    <ul>
+    <li>Conoscenza base di concetti e termini di containerizzazione e Kubernetes</li>
+    <li>Conoscenza base di metodologie devops</li>
+    <li>Conoscenza base di Linux</li>
+    <li>Interesse per la cybersicurezza</li>
+    </ul>"
     useful_info_title: "Informazioni utili"
-    useful_info_description: "Il workshop si svolge online e dura 8 ore, divise in due mattine: Martedì 16 e Mercoledì 17 Marzo 2021, dalle 9 alle 13."
+    useful_info_description: "Il workshop si svolge in presenza, a Bologna. Non è possibile partecipare da remoto.
+    <br><br  /><i>ATTENZIONE: Il biglietto per il workshop è venduto separatamente da quello per la conferenza. Per partecipare a workshop + conferenza occorre acquistare due biglietti separati.</i>"
     # CTA
-    cta_title: "Hurry up. There are only a few available places!"
+    cta_title: "Assicurati un posto! I biglietti sono in vendita"
+
+#   SIGHUP1:
+#     ws_id: SIGHUP1
+#     is_external: false
+#     page_uri: "workshop/SIGHUP1.html"
+#     page_title: ""
+#     workshop_title: ""
+#     ticket_url: "https://containerday-2023.eventbrite.com"
+#     ticket_label: "Partecipa al workshop"
+#     location_title: "Dove"
+#     location: "Bologna"
+#     # online_location: "online"
+#     location_name: "Hotel Savoia Regency"
+#     # location_name: "The Internet"
+#     location_contact_phone: ""
+#     location_contact_email: ""
+#     location_contact_url: "https://www.savoia.eu/"
+#     location_address: "Via del Pilastro, 2, 40127 Bologna BO"
+#     location_maps_url: "https://goo.gl/maps/KmKU5YsBGjZihnkTA"
+#     location_maps_label: "Mappa"
+#     location_additional_info: ""
+#     # location_additional_info: "add info 2"
+#     whatandwhen_title: "Quando"
+#     whatandwhen_additional_info: "Mercoledì 11 Ottobre 2023, dalle 9:30 alle 17:30. Sono inclusi coffee break e pranzo."
+# #    whatandwhen_additional_info: "Giovedì 17 Marzo 2022, dalle 9 alle 18"
+#     date: 2023-11-10T09:30+02:00
+#     end_date: 2023-11-10T17:30+02:00
+#     date_text: ""
+#     language_title: "Lingua"
+#     language: "italiano"
+#     # language_ext: "Lingua: italiano"
+#     language_additional_info: ""
+#     collab: "Workshop realizzato in collaborazione con SUSE"
+#     # description: "<i>sottotitolo o altra riga di descrizione sintetica</i>"
+#     description_long:
+#       "   <br><br
+#       <br><br  />
+#       <br><br  />"
+#     # video trailer?
+#     trailer: false
+#     trailer_url: ""
+#     # nota sul titolo: se il linguaggio specificato in `language` NON in clude 'italian', in pagina viene aggiunta la "s" finale
+#     teacher_title: "Docenti"
+#     teachers:
+#       teacher_1:
+#         teacher_name: ""
+#         teacher_bio: ""
+#         pic_filename: ""
+#         teacher_role: ""
+#         teacher_org: ""
+#       teacher_2:
+#         teacher_name: ""
+#         teacher_bio: ""
+#         pic_filename: ""
+#         teacher_role: ""
+#         teacher_org: ""
+#     topics_title: "Programma"
+#     topics:
+#       - ""
+#     addressees_title: "A chi è rivolto"
+#     addressees_description: ""
+#     requirements_title: "Requisiti di partecipazione"
+#     requirements_description: "."
+#     useful_info_title: "Informazioni utili"
+#     useful_info_description: "Il workshop si svolge in presenza, a Bologna. Non è possibile partecipare da remoto.
+#     <br><br  /><i>ATTENZIONE: Il biglietto per il workshop è venduto separatamente da quello per la conferenza. Per partecipare a workshop + conferenza occorre acquistare due biglietti separati.</i>"
+#     # CTA
+#     cta_title: "Assicurati un posto! I biglietti sono in vendita"
+
+#   rabbitmq:
+#     ws_id: Cyber-Ranching
+#     is_external: false
+#     page_uri: "workshop/Cyber-Ranching.html"
+#     page_title: "Lab Pratico di Cyber-Ranching"
+#     workshop_title: "Lab Pratico di Cyber-Ranching"
+#     ticket_url: "https://containerday-2023.eventbrite.com"
+#     ticket_label: "Partecipa al workshop"
+#     location_title: "Dove"
+#     location: "Bologna"
+#     # online_location: "online"
+#     location_name: "Hotel Savoia Regency"
+#     # location_name: "The Internet"
+#     location_contact_phone: ""
+#     location_contact_email: ""
+#     location_contact_url: "https://www.savoia.eu/"
+#     location_address: "Via del Pilastro, 2, 40127 Bologna BO"
+#     location_maps_url: "https://goo.gl/maps/KmKU5YsBGjZihnkTA"
+#     location_maps_label: "Mappa"
+#     location_additional_info: ""
+#     # location_additional_info: "add info 2"
+#     whatandwhen_title: "Quando"
+#     whatandwhen_additional_info: "Mercoledì 11 Ottobre 2023, dalle 9:30 alle 17:30. Sono inclusi coffee break e pranzo."
+# #    whatandwhen_additional_info: "Giovedì 17 Marzo 2022, dalle 9 alle 18"
+#     date: 2023-11-10T09:30+02:00
+#     end_date: 2023-11-10T17:30+02:00
+#     date_text: ""
+#     language_title: "Lingua"
+#     language: "italiano"
+#     # language_ext: "Lingua: italiano"
+#     language_additional_info: ""
+#     collab: "Workshop realizzato in collaborazione con SUSE"
+#     # description: "<i>sottotitolo o altra riga di descrizione sintetica</i>"
+#     description_long:
+#       "   <br><br
+#       <br><br  />
+#       <br><br  />"
+#     # video trailer?
+#     trailer: false
+#     trailer_url: ""
+#     # nota sul titolo: se il linguaggio specificato in `language` NON in clude 'italian', in pagina viene aggiunta la "s" finale
+#     teacher_title: "Docenti"
+#     teachers:
+#       teacher_1:
+#         teacher_name: ""
+#         teacher_bio: ""
+#         pic_filename: ""
+#         teacher_role: ""
+#         teacher_org: ""
+#       teacher_2:
+#         teacher_name: ""
+#         teacher_bio: ""
+#         pic_filename: ""
+#         teacher_role: ""
+#         teacher_org: ""
+#     topics_title: "Programma"
+#     topics:
+#       - ""
+#     addressees_title: "A chi è rivolto"
+#     addressees_description: ""
+#     requirements_title: "Requisiti di partecipazione"
+#     requirements_description: "."
+#     useful_info_title: "Informazioni utili"
+#     useful_info_description: "Il workshop si svolge in presenza, a Bologna. Non è possibile partecipare da remoto.
+#     <br><br  /><i>ATTENZIONE: Il biglietto per il workshop è venduto separatamente da quello per la conferenza. Per partecipare a workshop + conferenza occorre acquistare due biglietti separati.</i>"
+#     # CTA
+#     cta_title: "Assicurati un posto! I biglietti sono in vendita"
